Actually fixed overflow on bottom, probably, maybe

--- a/src/containers/DashboardWrapper/DashboardWrapper.module.scss
+++ b/src/containers/DashboardWrapper/DashboardWrapper.module.scss
@@ -1,11 +1,11 @@
 .DashboardWrapper {
     background-color: var(--tavla-background-color);
     color: var(--tavla-font-color);
-    padding: 0 4rem;
+    padding: 0 4rem 2rem 4rem;
 }
 
 .Byline {
-    margin-top: 4.5rem;
+    margin-top: 5rem;
     display: flex;
     align-items: center;
     color: var(--tavla-font-color);
